--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=http://10.10.1.2:5000/" />
+    <meta http-equiv="refresh" content="0; url=https://e550-103-124-196-131.ngrok-free.app/" />
     <style>
       body {
         background-color: #111;
@@ -17,7 +17,7 @@
   <body>
     <h2>Menghubungkan ke portal voucher WiFi...</h2>
     <p>
-      Jika tidak otomatis, klik <a href="http://10.10.1.2:5000/">di sini</a>.
+      Jika tidak otomatis, klik <a href="https://e550-103-124-196-131.ngrok-free.app/">di sini</a>.
     </p>
   </body>
 </html>
